--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-activity": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-search-box": "^2.0.2"
